# layout-dm

./: .gitignore  .gitmodules  LICENSE  README.md  eval.py  index.html  pyproject.toml  render.py
css/: app.css  bootstrap.min.css
docs/: custom_dataset.md
icon/: memo.txt
js/: app.js
notebooks/: demo.ipynb
src/trainer/trainer/: crossplatform_util.py  global_configs.py  hydra_configs.py  main.py  test.py
src/trainer/trainer/config/: main.yaml
src/trainer/trainer/config/backbone/: medium.yaml
src/trainer/trainer/config/data/: default.yaml
src/trainer/trainer/config/dataset/: publaynet.yaml  rico25.yaml
src/trainer/trainer/config/experiment/: bart.yaml  blt_eccv2022.yaml  blt_eccv2022_ordered.yaml  diffusionlm_neurips2022.yaml  layout_transformer_iccv2021.yaml  layout_transformer_iccv2021_ordered.yaml  layoutdm.yaml  maskgit_cvpr2022.yaml  maskgit_cvpr2022_ordered.yaml  ruite.yaml  vqdiffusion.yaml
src/trainer/trainer/config/model/: bart.yaml  blt.yaml  elem_wise_autoreg.yaml  layout_continuous_diffusion.yaml  layoutdm.yaml  maskgit.yaml  ruite.yaml
src/trainer/trainer/config/optimizer/: adamw.yaml
src/trainer/trainer/config/scheduler/: inverse_sqrt_decay_with_warmup.yaml  reduce_lr_on_plateau.yaml  reduce_lr_on_plateau_with_warmup.yaml  void.yaml
src/trainer/trainer/config/training/: default.yaml
src/trainer/trainer/data/: util.py
src/trainer/trainer/datasets/: __init__.py  base.py  dataset.py  publaynet.py  rico.py
src/trainer/trainer/fid/: model.py  train.py
src/trainer/trainer/helpers/: bbox_tokenizer.py  clustering.py  layout_tokenizer.py  mask.py  metric.py  sampling.py  scheduler.py  task.py  util.py  visualization.py
src/trainer/trainer/models/: bart.py  base_model.py  blt.py  elem_wise_autoreg.py  layout_continuous_diffusion.py  layoutdm.py  maskgit.py  ruite.py  transformer_utils.py
(+12 files in other folders)
